applications/omni/omni-repository/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: omni-repository
  name: omni-repository
