applications/omni/omni-repository/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: omni-repository-ingress
  namespace: omni-repository
spec:
  rules:
  - host: omnirepo.openeuler.sh
    http:
      paths:
      - backend:
          serviceName: omni-repository
          servicePort: 80
        path: /
  tls:
  - hosts:
    - omnirepo.openeuler.sh
    secretName: omni-repository-tls
